--- a/BulletSim.vcproj
+++ b/BulletSim.vcproj
@@ -12,9 +12,9 @@
 		<Platform
 			Name="Win32"
 		/>
-	<Platform
- 			Name="x64"
- 		/>
+		<Platform
+			Name="x64"
+		/>
 	</Platforms>
 	<ToolFiles>
 	</ToolFiles>
@@ -165,152 +165,152 @@
 			/>
 		</Configuration>
 		<Configuration
- 			Name="Debug|x64"
- 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
- 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
- 			ConfigurationType="2"
- 			CharacterSet="1"
- 			ManagedExtensions="0"
- 			>
- 			<Tool
- 				Name="VCPreBuildEventTool"
- 			/>
- 			<Tool
- 				Name="VCCustomBuildTool"
- 			/>
- 			<Tool
- 				Name="VCXMLDataGeneratorTool"
- 			/>
- 			<Tool
- 				Name="VCWebServiceProxyGeneratorTool"
- 			/>
- 			<Tool
- 				Name="VCMIDLTool"
- 				TargetEnvironment="3"
- 			/>
- 			<Tool
- 				Name="VCCLCompilerTool"
- 				Optimization="0"
- 				AdditionalIncludeDirectories="&quot;.\bullet-2.79\src&quot;;&quot;.\bullet-2.79\Extras\ConvexDecomposition&quot;"
- 				PreprocessorDefinitions="WIN32;_DEBUG"
- 				RuntimeLibrary="3"
- 				UsePrecompiledHeader="0"
- 				WarningLevel="3"
- 				DebugInformationFormat="3"
- 			/>
- 			<Tool
- 				Name="VCManagedResourceCompilerTool"
- 			/>
- 			<Tool
- 				Name="VCResourceCompilerTool"
- 			/>
- 			<Tool
- 				Name="VCPreLinkEventTool"
- 			/>
- 			<Tool
- 				Name="VCLinkerTool"
- 				AdditionalDependencies="BulletCollision_x64.lib BulletDynamics_x64.lib LinearMath_x64.lib ConvexDecomposition_x64.lib $(NOINHERIT)"
- 				LinkIncremental="2"
- 				AdditionalLibraryDirectories="&quot;.\bullet-2.79\lib&quot;"
- 				GenerateDebugInformation="true"
- 				AssemblyDebug="1"
- 				TargetMachine="17"
- 			/>
- 			<Tool
- 				Name="VCALinkTool"
- 			/>
- 			<Tool
- 				Name="VCManifestTool"
- 			/>
- 			<Tool
- 				Name="VCXDCMakeTool"
- 			/>
- 			<Tool
- 				Name="VCBscMakeTool"
- 			/>
- 			<Tool
- 				Name="VCFxCopTool"
- 			/>
- 			<Tool
- 				Name="VCAppVerifierTool"
- 			/>
- 			<Tool
- 				Name="VCPostBuildEventTool"
- 			/>
- 		</Configuration>
- 		<Configuration
- 			Name="Release|x64"
- 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
- 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
- 			ConfigurationType="2"
- 			CharacterSet="1"
- 			ManagedExtensions="0"
- 			WholeProgramOptimization="1"
- 			>
- 			<Tool
- 				Name="VCPreBuildEventTool"
- 			/>
- 			<Tool
- 				Name="VCCustomBuildTool"
- 			/>
- 			<Tool
- 				Name="VCXMLDataGeneratorTool"
- 			/>
- 			<Tool
- 				Name="VCWebServiceProxyGeneratorTool"
- 			/>
- 			<Tool
- 				Name="VCMIDLTool"
- 				TargetEnvironment="3"
- 			/>
- 			<Tool
- 				Name="VCCLCompilerTool"
- 				AdditionalIncludeDirectories="&quot;.\bullet-2.79\src&quot;"
- 				PreprocessorDefinitions="WIN32;NDEBUG"
- 				RuntimeLibrary="2"
- 				UsePrecompiledHeader="0"
- 				WarningLevel="3"
- 				DebugInformationFormat="3"
- 			/>
- 			<Tool
- 				Name="VCManagedResourceCompilerTool"
- 			/>
- 			<Tool
- 				Name="VCResourceCompilerTool"
- 			/>
- 			<Tool
- 				Name="VCPreLinkEventTool"
- 			/>
- 			<Tool
- 				Name="VCLinkerTool"
- 				AdditionalDependencies="BulletCollision_x64.lib BulletDynamics_x64.lib LinearMath_x64.lib $(NOINHERIT)"
- 				LinkIncremental="1"
- 				AdditionalLibraryDirectories="&quot;.\bullet-2.79\lib&quot;"
- 				GenerateDebugInformation="true"
- 				TargetMachine="17"
- 			/>
- 			<Tool
- 				Name="VCALinkTool"
- 			/>
- 			<Tool
- 				Name="VCManifestTool"
- 			/>
- 			<Tool
- 				Name="VCXDCMakeTool"
- 			/>
- 			<Tool
- 				Name="VCBscMakeTool"
- 			/>
- 			<Tool
- 				Name="VCFxCopTool"
- 			/>
- 			<Tool
- 				Name="VCAppVerifierTool"
- 			/>
- 			<Tool
- 				Name="VCPostBuildEventTool"
- 			/>
- 		</Configuration>
+			Name="Debug|x64"
+			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
+			ConfigurationType="2"
+			CharacterSet="1"
+			ManagedExtensions="0"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				TargetEnvironment="3"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				Optimization="0"
+				AdditionalIncludeDirectories="&quot;.\bullet-2.79\src&quot;;&quot;.\bullet-2.79\Extras\ConvexDecomposition&quot;"
+				PreprocessorDefinitions="WIN32;_DEBUG"
+				RuntimeLibrary="3"
+				UsePrecompiledHeader="0"
+				WarningLevel="3"
+				DebugInformationFormat="3"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLinkerTool"
+				AdditionalDependencies="BulletCollision_x64.lib BulletDynamics_x64.lib LinearMath_x64.lib ConvexDecomposition_x64.lib $(NOINHERIT)"
+				LinkIncremental="2"
+				AdditionalLibraryDirectories="&quot;.\bullet-2.79\lib&quot;"
+				GenerateDebugInformation="true"
+				AssemblyDebug="1"
+				TargetMachine="17"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
+		</Configuration>
+		<Configuration
+			Name="Release|x64"
+			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
+			ConfigurationType="2"
+			CharacterSet="1"
+			ManagedExtensions="0"
+			WholeProgramOptimization="1"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				TargetEnvironment="3"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				AdditionalIncludeDirectories="&quot;.\bullet-2.79\src&quot;"
+				PreprocessorDefinitions="WIN32;NDEBUG"
+				RuntimeLibrary="2"
+				UsePrecompiledHeader="0"
+				WarningLevel="3"
+				DebugInformationFormat="3"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLinkerTool"
+				AdditionalDependencies="BulletCollision_x64.lib BulletDynamics_x64.lib LinearMath_x64.lib $(NOINHERIT)"
+				LinkIncremental="1"
+				AdditionalLibraryDirectories="&quot;.\bullet-2.79\lib&quot;"
+				GenerateDebugInformation="true"
+				TargetMachine="17"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
+		</Configuration>
 	</Configurations>
 	<References>
 		<AssemblyReference
@@ -340,7 +340,19 @@
 				>
 			</File>
 			<File
+				RelativePath=".\AvatarObject.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\BulletSim.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\IPhysObject.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\PrimObject.cpp"
 				>
 			</File>
 		</Filter>
@@ -350,7 +362,19 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\AvatarObject.h"
+				>
+			</File>
+			<File
 				RelativePath=".\BulletSim.h"
+				>
+			</File>
+			<File
+				RelativePath=".\IPhysObject.h"
+				>
+			</File>
+			<File
+				RelativePath=".\PrimObject.h"
 				>
 			</File>
 		</Filter>
