Nearly all object specific code moved out of BulletSim.cpp. Have both GroundPlane and Terrain subclasses of IPhysObject. It compiles.
What still needs doing:
Meshes and Hulls broken out of BulletSim.cpp.
Maybe create a constraint object to hold constraint construction code.
Verify that both prim and avatar objects place and remove the
    rigidBody into and out of the world.
Cleanup and verify the API to managed code.
Oh, and functional debugging.

--- a/BulletSim.vcproj
+++ b/BulletSim.vcproj
@@ -367,6 +367,10 @@
 				RelativePath=".\PrimObject.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\TerrainObject.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -407,6 +411,10 @@
 			</File>
 			<File
 				RelativePath=".\PrimObject.h"
+				>
+			</File>
+			<File
+				RelativePath=".\TerrainObject.h"
 				>
 			</File>
 			<File
