Added Constraint class. Completed ConstraintCollection. Moved placing into dynamicWorld into Constraint creation/destruction.     (Yea! for destructors!!) Completed ObjectCollection.
What still needs doing:
    Meshes and Hulls broken out of BulletSim.cpp.
    Cleanup and verify the API to managed code.
    Oh, and functional debugging.

--- a/BulletSim.vcproj
+++ b/BulletSim.vcproj
@@ -348,6 +348,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Constraint.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\ConstraintCollection.cpp"
 				>
 			</File>
@@ -391,6 +395,10 @@
 			</File>
 			<File
 				RelativePath=".\BulletSim.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Constraint.h"
 				>
 			</File>
 			<File
