BulletSim: Add initial code for new C++ API that pushes all of the logic into the C++ code. It may make object manipulation a little slower but it will give more flexibility to the C# programmers.

--- a/BulletSim.vcproj
+++ b/BulletSim.vcproj
@@ -340,6 +340,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\API2.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\AvatarObject.cpp"
 				>
 			</File>
