BulletSim: remove dependency on memcpy to remove the dependency on the newer glibc 2.14. Fixed line endings.

--- a/BulletSim.vcxproj
+++ b/BulletSim.vcxproj
@@ -200,6 +200,7 @@
     <ClInclude Include="ObjectCollection.h" />
     <ClInclude Include="PrimObject.h" />
     <ClInclude Include="TerrainObject.h" />
+    <ClInclude Include="Util.h" />
     <ClInclude Include="WorldData.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
