BulletSim: Add more debugging dump routines for constraints and shapes. DumpAll() which prints all the collisionObjects, collisionShapes     and constraints known to the dynamic world. Definitions for some compile time asserts and memory consistancy checkes.     The implementation bodies are not filled in yet.

--- a/BulletSim.vcxproj
+++ b/BulletSim.vcxproj
@@ -194,6 +194,7 @@
     <ClInclude Include="ArchStuff.h" />
     <ClInclude Include="AvatarObject.h" />
     <ClInclude Include="BulletSim.h" />
+    <ClInclude Include="DebugLogic.h" />
     <ClInclude Include="GroundPlaneObject.h" />
     <ClInclude Include="IPhysObject.h" />
     <ClInclude Include="ObjectCollection.h" />
