BulletSim: addition of BuildConvexHullShapeFromMesh entry point and routine.

--- a/BulletSim.vcxproj
+++ b/BulletSim.vcxproj
@@ -132,7 +132,7 @@
     <ClCompile>
       <AdditionalIncludeDirectories>.\bullet-2.81\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <PrecompiledHeader>
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
